# accountingbot

./: .env-example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
src/: main.rs
src/accounting_client_api/: accounting_client_api.rs  mod.rs
src/accounting_client_api/dto/: category_dto.rs  mod.rs  pagination_dto.rs  transaction_dto.rs  user_dto.rs
src/dto/: user.rs
src/services/: user_service.rs
