[package]
name = "accounting_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.17.0", features = ["macros"] }
dotenvy = "0.15.7"
log = "0.4.28"

# accounting_client_api
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
chrono = { version = "0.4.41", features = ["serde"] }